--- a/admin/config.yml
+++ b/admin/config.yml
@@ -33,3 +33,14 @@ collections:
       - { label: 'Navigation Title', name: 'navtitle', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'hidden', default: 'nav' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+  # Our blog posts
+  - name: 'js' # Used in routes, e.g., /admin/collections/blog
+    label: 'js' # Used in the UI
+    folder: 'js' # The path to the folder where the documents are stored
+    extension: 'js'
+    format: 'frontmatter'
+    frontmatter_delimiter: ['/*<metadata>*//*', '*//*</metadata>*/']
+    create: true # Allow users to create new documents in this collection
+    slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - { label: 'Body', name: 'body', widget: 'text' }
