--- a/admin/config.yml
+++ b/admin/config.yml
@@ -39,7 +39,7 @@ collections:
     folder: 'js' # The path to the folder where the documents are stored
     extension: 'js'
     format: 'json-frontmatter'
-    frontmatter_delimiter: ['/*<metadata>*//*', '*//*</metadata>*/']
+    frontmatter_delimiter: '/*' '*/'
     create: true # Allow users to create new documents in this collection
     slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
