--- a/admin/config.yml
+++ b/admin/config.yml
@@ -41,7 +41,7 @@ collections:
     format: 'json-frontmatter'
     frontmatter_delimiter: '`;'
     create: true # Allow users to create new documents in this collection
-    slug: '{{filename}}' # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: '{{filename}}.js' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - { label: 'Filename', name: 'filename', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'text' }
