--- a/admin/config.yml
+++ b/admin/config.yml
@@ -40,6 +40,7 @@ collections:
     extension: 'js'
     format: 'json-frontmatter'
     frontmatter_delimiter: '`;'
+    identifier_field: 'filename'
     create: true # Allow users to create new documents in this collection
     slug: '{{filename}}.js' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
