--- a/admin/config.yml
+++ b/admin/config.yml
@@ -37,12 +37,12 @@ collections:
   - name: 'js' # Used in routes, e.g., /admin/collections/blog
     label: 'js' # Used in the UI
     folder: 'js' # The path to the folder where the documents are stored
-    extension: 'js'
+    extension: ''
     format: 'json-frontmatter'
-    frontmatter_delimiter: '`;'
+    frontmatter_delimiter: '/*/'
     identifier_field: 'filename'
     create: true # Allow users to create new documents in this collection
-    slug: '{{filename}}.js' # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: '{{filename}}' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - { label: 'Filename', name: 'filename', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'text' }
