--- a/admin/config.yml
+++ b/admin/config.yml
@@ -34,15 +34,15 @@ collections:
       - { label: 'Tags', name: 'tags', widget: 'hidden', default: 'nav' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
   # Our blog posts
-  - name: 'js' # Used in routes, e.g., /admin/collections/blog
-    label: 'js' # Used in the UI
-    folder: 'js' # The path to the folder where the documents are stored
-    extension: 'file'
+  - name: 'files' # Used in routes, e.g., /admin/collections/blog
+    label: 'Files' # Used in the UI
+    label_singular: 'File'
+    folder: 'src' # The path to the folder where the documents are stored
+    extension: 'f'
     format: 'json-frontmatter'
-    frontmatter_delimiter: '/*/'
     identifier_field: 'filename'
     create: true # Allow users to create new documents in this collection
-    slug: '{filename}' # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: '{{filename}}' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - { label: 'Filename', name: 'filename', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'text' }
